# light

./: .dockerignore  .gitignore  .pylintrc  LICENSE  Makefile  README.md  anaconda-project.yml  pyproject.toml  setup.cfg
.github/workflows/: pull-request.yml  python-publish.yml
assets/tiles/: dirt.xcf  forest.xcf  grass.xcf  ocean.xcf  rock.xcf  shore.xcf  unknown.xcf  water.xcf
legacy/: .projectignore  Dockerfile  anaconda-project.yml  build.sh  buildozer.spec  environment.github.yml
legacy/conda-recipe/: meta.yaml
requirements/: requirements.test.txt  requirements.txt
resources/: build.sh  client.sh  lint-fix.sh  lint.sh  prepare.sh  publish.sh  server.sh
src/shapeandshare/light/: const.py  display.py  loop.py  main.py
src/shapeandshare/light/contracts/dtos/: center_metadata.py
src/shapeandshare/light/contracts/sprites/: chunk.py  island.py  tile.py
src/shapeandshare/tiland/: const.py  display.py  loop.py  main.py
src/shapeandshare/tiland/contracts/dtos/: center_dim.py
src/shapeandshare/tiland/contracts/sprites/: island.py  tile.py
tests/integration/: Makefile
tests/integration/resources/: client.sh  prepare.sh  server.sh  setup.sh
