[metadata]
name = shapeandshare.tiland
version = 0.1.0
author = Joshua C. Burt
author_email = joshburt@shapeandshare.com
description = Tiland
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.12
install_requires =
    fastapi
    pydantic
    uvicorn

package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        tiland = shapeandshare.tiland.main:main
